Add welcome page, jsp , tag , display user information from the database...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 application.production=false
-spring.mvc.view.prefix=/WEB-INF/JSP/
-spring.mvc.view.suffix=.jsp
 
-
-logging.level.org.springframework=TRACE
-logging.level.com=TRACE
+db.driver=org.postgresql.Driver
+db.url=jdbc:postgresql://localhost/ResumeTester
+db.username=webtester
+db.password=webtester
+db.pool.initSize=5
+db.pool.maxSize=10
+hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
